--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AndroidEatIt</string>
-    <string name="slogan">Slicing Up Freshness</string>
+    <string name="slogan">We transport products to customers as quickly as our ex betrays</string>
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -8,5 +8,10 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="forgot_pwd"><u>Forgot Password?</u></string>
+
+    <string name="facebook_app_id">276939229580176</string>
+    <string name="account_kit_client_token">c458599b535fcf778e468ba7f4b798d0</string>
+    <string name="fb_login_protocol_scheme">fb276939229580176</string>
 
 </resources>
